syntax = "proto3";
package common.mesh.gloo.solo.io;
option go_package = "github.com/solo-io/gloo-mesh/pkg/api/common.mesh.gloo.solo.io/v1alpha2";

// Describes a matcher against HTTP request headers.
message HeaderMatcher {
    // Specify the name of the header in the request.
    string name = 1;

    // Specify the value of the header. If the value is absent a request that
    // has the name header will match, regardless of the headerâ€™s value.
    string value = 2;

    // Specify whether the header value should be treated as regex.
    bool regex = 3;

    /*
    If set to true, the result of the match will be inverted. Defaults to false.

    Examples:

        - name=foo, invert_match=true: matches if no header named `foo` is present
        - name=foo, value=bar, invert_match=true: matches if no header named `foo` with value `bar` is present
        - name=foo, value=``\d{3}``, regex=true, invert_match=true: matches if no header named `foo` with a value consisting of three integers is present.
    */
    bool invert_match = 4;
}

// Describes a matcher against HTTP response status codes.
message StatusCodeMatcher {

    // The status code value to match against.
    uint32 value = 1;

    // The comparison type used for matching.
    Comparator comparator = 2;

    enum Comparator {
        // Strict equality.
        EQ = 0;

        // Greater than or equal to.
        GE = 1;

        // Less than or equal to.
        LE = 2;
    }
}
